tests/miniJava/neg/006082_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { System.out.println ( public int [] java ( ) { return 0 ; } ) ; } }
